--- a/styles/Proyect.module.scss
+++ b/styles/Proyect.module.scss
@@ -1,5 +1,5 @@
 .main {
-   width: 80%;
+   width: 90%;
    height: 500px;
    background-color: #262626;
    display: flex;
@@ -8,14 +8,19 @@
 
    & .barra {
       background-color: #613989;
-      width: 10px;
+      width: 20px;
       height: 100%;
+      z-index: 2;
       border-radius: 10px 0 0 10px;
    }
+   & .mainbody {
+      display: flex;
+      height: 80%;
+   }
+
    & .info {
       color: #fff;
       width: 50%;
-      height: 80%;
       font-size: 2rem;
       padding: 10px 20px;
       display: flex;
@@ -33,12 +38,13 @@
          display: flex;
          flex-direction: column;
          gap: 20px;
+         padding-bottom: 20px;
          & a {
             padding-left: 15px;
             text-decoration: none;
             color: #fff;
             &:hover {
-               color: #613989;
+               text-decoration-line: underline;
             }
          }
          & svg {
@@ -57,9 +63,44 @@
    }
    & .imageContainer {
       width: 50%;
-      padding: 30px;
+      padding-right: 30px;
+      display: flex;
+      align-items: center;
       & .image {
          border-radius: 10px;
+      }
+   }
+}
+
+@media only screen and (max-width: 1200px) {
+   .main {
+      height: 450px;
+      width: 350px;
+      & .barra {
+         width: 40px;
+      }
+      & .mainbody {
+         height: 100%;
+         flex-direction: column;
+
+         & .info {
+            width: 100%;
+            height: 100%;
+            order: 2;
+
+            & .links {
+               & svg {
+                  width: 20px;
+               }
+            }
+         }
+
+         & .imageContainer {
+            padding: 20px;
+            order: 1;
+            width: 100%;
+            height: auto;
+         }
       }
    }
 }
