--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,7 @@ body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
+   align-items: center;
 }
 
 /* font-family: 'Exo 2', sans-serif; */
