--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -102,7 +102,8 @@
    background-color: #fff;
 }
 
-.whatsapp:hover {
+.whatsapp:hover,
+.whatsapp:focus {
    background-color: #25d366;
    & > svg {
       fill: #fff;
