--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,8 @@
 .main {
    display: flex;
    flex-direction: column;
+   width: 100vw;
+   align-items: center;
 
    & .presentation {
       display: flex;
@@ -45,7 +47,7 @@
    }
    & .titulo {
       align-self: center;
-      margin: 20px 0;
+      margin: 30px 0;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -63,12 +65,6 @@
          background-color: #613989;
       }
    }
-}
-
-.skills {
-   height: 160px;
-   width: 100%;
-   background-color: #333;
 }
 
 @media only screen and (max-width: 600px) {
