--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,37 +1,41 @@
 .navbar {
-   display: flex;
-   width: 100%;
-   justify-content: center;
-
-   li {
-      list-style: none;
-   }
-   &__Item {
+   height: 90px;
+   & .Links {
       display: flex;
-      flex-direction: column;
+      height: 100%;
+      width: 100%;
+      justify-content: center;
       align-items: center;
+      z-index: 5;
 
-      margin: 2rem;
-      text-align: center;
-      position: relative;
-      &__underline {
-         width: 70px;
-         height: 0.6rem;
-         border-radius: 10px;
-         background-color: transparent;
-         display: inline-block;
-         transition: all 0.3s ease-in;
+      li {
+         list-style: none;
       }
-      &__Text {
-         font-size: 2.4rem;
-         color: #4a4a4a;
-         text-decoration: none;
-         margin: 0.5rem 4rem;
-         &:hover {
-            & + .navbar__Item__underline {
-               width: 130px;
-               display: block;
-               background-color: #613989;
+      &__Item {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         text-align: center;
+         position: relative;
+         &__underline {
+            width: 70px;
+            height: 0.6rem;
+            border-radius: 10px;
+            background-color: transparent;
+            display: inline-block;
+            transition: all 0.3s ease-in;
+         }
+         &__Text {
+            font-size: 2.4rem;
+            color: #4a4a4a;
+            text-decoration: none;
+            margin: 0.5rem 4rem;
+            &:hover {
+               & + .Links__Item__underline {
+                  width: 130px;
+                  display: block;
+                  background-color: #613989;
+               }
             }
          }
       }
@@ -39,7 +43,99 @@
 }
 
 @media only screen and (max-width: 768px) {
-   .navbar__Item__Text {
-      padding: 0.5rem 2rem;
+   // .navbar__Item__Text {
+   //    padding: 0.5rem 2rem;
+   // }
+   .navbar {
+      height: 70px;
+      position: relative;
+      & .Hamburguer {
+         position: absolute;
+         z-index: 10;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         cursor: pointer;
+         width: 50px;
+         height: 50px;
+         right: 20px;
+         top: 10px;
+
+         &__line {
+            width: 30px;
+            height: 3px;
+            background: #333;
+            border-radius: 5px;
+            margin: 0 5px;
+
+            &::before,
+            &::after {
+               content: "";
+               position: absolute;
+               width: 30px;
+               height: 3px;
+               background: #333;
+               border-radius: 5px;
+               transition: all 0.5s ease;
+            }
+
+            &::before {
+               transform: translateY(-10px);
+            }
+            &::after {
+               transform: translateY(10px);
+            }
+            &.openHam {
+               background: #fff;
+
+               &::before {
+                  transform: rotate(45deg);
+               }
+
+               &::after {
+                  transform: rotate(-45deg);
+               }
+            }
+         }
+      }
+      & .Links {
+         position: fixed;
+         padding-top: 70px;
+         background: #fff;
+         height: 100vh;
+         width: 100%;
+         flex-direction: column;
+         justify-content: flex-start;
+         clip-path: circle(100px at 95% -14%);
+         -webkit-clip-path: circle(100px at 95% -14%);
+         transition: all 0.8s ease-in;
+         pointer-events: none;
+         &.open {
+            clip-path: circle(1250px at 95% -11%);
+            -webkit-clip-path: circle(1250px at 95% -11%);
+            pointer-events: all;
+         }
+         &__Item {
+            width: 100%;
+            &__Text {
+               width: 100%;
+               font-size: 24px;
+               padding: 20px 0;
+               &:hover {
+                  & + .Links__Item__underline {
+                     width: 100%;
+                     background-color: #cfcfcf;
+                  }
+               }
+            }
+            &__underline {
+               width: 100%;
+               background-color: #cfcfcf;
+            }
+         }
+      }
    }
 }
+
+// @media (hover: none) and (pointer: coarse) {
+// }
