--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,13 +9,15 @@ body {
    font-family: "Poppins", sans-serif;
    font-size: 10px;
    height: 100%;
+   width: 100%;
 }
 
 #__next {
    min-height: 100vh;
+   overflow: hidden;
+   width: 100%;
    display: flex;
    flex-direction: column;
-   align-items: center;
 }
 
 /* font-family: 'Exo 2', sans-serif; */
