--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,6 +1,18 @@
 .footer {
    margin-top: auto;
    width: 100%;
+   &__curve {
+      width: 100%;
+      overflow: hidden;
+      line-height: 0;
+
+      & svg {
+         position: relative;
+         width: calc(100% + 1.3px);
+         height: 56px;
+         fill: #262626;
+      }
+   }
    &__main {
       background-color: #262626;
       display: flex;
