--- a/styles/Photos.module.scss
+++ b/styles/Photos.module.scss
@@ -3,6 +3,7 @@
    align-self: center;
    display: flex;
    flex-direction: column;
+   padding-bottom: 100px;
    & .title {
       align-self: center;
       margin: 30px 0 50px 0;
