--- a/styles/Proyect.module.scss
+++ b/styles/Proyect.module.scss
@@ -1,5 +1,5 @@
 .main {
-   width: 90%;
+   width: 75%;
    height: 500px;
    background-color: #262626;
    display: flex;
@@ -73,6 +73,12 @@
 }
 
 @media only screen and (max-width: 1200px) {
+   .main {
+      height: 450px;
+   }
+}
+
+@media only screen and (max-width: 992px) {
    .main {
       height: 450px;
       width: 350px;
