--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -124,7 +124,7 @@
       }
       & .projects {
          transform: translateX(0);
-         & a {
+         & > a {
             display: none;
          }
       }
