--- a/styles/Proyects.module.scss
+++ b/styles/Proyects.module.scss
@@ -9,7 +9,7 @@
    padding-bottom: 100px;
    & .title {
       align-self: center;
-      margin: 30px 0 50px 0;
+      margin: 20px 0;
       width: 100%;
       display: flex;
       flex-direction: column;
